--- a/site/NextcloudFileOperations/index.html
+++ b/site/NextcloudFileOperations/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="canonical" href="https://example.com/NextcloudFileOperations/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="canonical" href="https://nextcloud-talk-bot.readthedocs.io/NextcloudFileOperations/" />
       <link rel="shortcut icon" href="../img/favicon.ico" />
     <title>NextcloudFileOperations - Nextcloud Talk Bot</title>
     <link rel="stylesheet" href="../css/theme.css" />
