--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="None" /><link rel="canonical" href="https://example.com/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="None" /><link rel="canonical" href="https://nextcloud-talk-bot.readthedocs.io/" />
       <link rel="shortcut icon" href="img/favicon.ico" />
     <title>Nextcloud Talk Bot</title>
     <link rel="stylesheet" href="css/theme.css" />
@@ -141,5 +141,5 @@ License
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-07 00:16:43.354246+00:00
+Build Date UTC : 2023-04-07 00:19:01.241092+00:00
 -->
