--- a/site/index.html
+++ b/site/index.html
@@ -77,8 +77,7 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <p>The Nextcloud Talk Bot is a powerful tool that enhances the functionality of Nextcloud Talk by allowing users to interact with the bot to perform various tasks. This documentation will guide you through the process of setting up the bot, configuring it, and using its features.
-Table of Contents</p>
+                <h2 id="table-of-contents">Table of Contents</h2>
 <pre><code>Requirements
 Installation
 Configuration
@@ -141,5 +140,5 @@ License
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-07 00:44:59.862406+00:00
+Build Date UTC : 2023-04-07 00:46:57.438275+00:00
 -->
