--- a/site/NextcloudTalkExtractor/index.html
+++ b/site/NextcloudTalkExtractor/index.html
@@ -80,13 +80,14 @@
                 <p>The NextcloudTalkExtractor class is a utility for interacting with the Nextcloud Talk API and extracting data. 
 It provides methods for fetching conversations, participants, and messages for an authenticated user.</p>
 <h2 id="initialization">Initialization:</h2>
-<pre><code>To create an instance of the NextcloudTalkExtractor class, you will need the following information:
-    - base_url: The base URL for the Nextcloud server.
-    - username: The username for the Nextcloud user account.
-    - password: The password for the Nextcloud user account.
-    - room_id (optional): The room token for the Nextcloud chat group.
-    - message_limit (optional): The default maximum number of messages to retrieve.
-</code></pre>
+<p>To create an instance of the NextcloudTalkExtractor class, you will need the following information:</p>
+<ul>
+<li>base_url: The base URL for the Nextcloud server.</li>
+<li>username: The username for the Nextcloud user account.</li>
+<li>password: The password for the Nextcloud user account.</li>
+<li>room_id (optional): The room token for the Nextcloud chat group.</li>
+<li>message_limit (optional): The default maximum number of messages to retrieve.</li>
+</ul>
 <h2 id="methods">Methods:</h2>
 <ol>
 <li>
