--- a/site/FirstRunSetup/index.html
+++ b/site/FirstRunSetup/index.html
@@ -105,6 +105,7 @@
 <h2 id="usage">Usage</h2>
 <p>To run the FirstRunSetup, import the wizard by </p>
 <pre><code>from nextcloud_talk_bot.first_run_setup import FirstRunSetup
+
 FirstRunSetup.first_run()                                                                                                   
 </code></pre>
 <p>The user will be guided through the setup process, and the necessary data will be stored in a file called .nextclouddata in your home directory.
@@ -116,11 +117,17 @@ Alternatively, the decryption password can be stored in the NCDECODE environment
 A mix of storing decryption password in environment variable and password in .password file or vice versa is also possible and recommended.</p>
 <p>However, since third parties can read the password with little effort as soon as they have access to your system, it is advisable not to use admin users for this package.</p>
 <h2 id="methods">Methods</h2>
-<p>get_credentials()</p>
+<ol>
+<li>get_credentials()</li>
+</ol>
 <p>Executes the full setup process, verifies the credentials, and writes the data to the .nextclouddata file.</p>
-<p>check_if_data_file_already_exists()</p>
+<ol>
+<li>check_if_data_file_already_exists()</li>
+</ol>
 <p>Checks if the .nextclouddata file exists. If it does, the user is prompted to confirm whether they want to continue and overwrite the file or abort the setup process.</p>
-<p>encrypt_password()</p>
+<ol>
+<li>encrypt_password()</li>
+</ol>
 <p>This method encrypts the given password using Fernet symmetric encryption. It stores the encrypted password in a file named .password and the encryption key in a file named .decode.</p>
 <h2 id="exmples">Exmples</h2>
 <pre><code>from nextcloud_talk_bot.Nextcloudtalkbot import NextcloudTalkBot
