--- a/site/index.html
+++ b/site/index.html
@@ -90,21 +90,30 @@
             <div class="section" itemprop="articleBody">
               
                 <h2 id="table-of-contents">Table of Contents</h2>
-<pre><code>Requirements
-Installation
+<p><a href="#requirements">Requirements</a>
+[Installation] (#installation)
 Configuration
 Usage
 Commands
 Contributing
-License
-</code></pre>
+License</p>
 <h2 id="requirements">Requirements</h2>
-<p>To use the Nextcloud Talk Bot, you will need:</p>
+<p><a id='requirements'></a>
+To use the Nextcloud Talk Bot, you will need:</p>
 <ul>
 <li>A Nextcloud instance with the Talk app installed</li>
 <li>A bot user with apppassword setup</li>
 <li>Python 3.7 or higher</li>
 </ul>
+<h2 id="installation">Installation</h2>
+<p><a id='installation'></a></p>
+<p>Via PIP:</p>
+<pre><code>pip install nextcloudtalkbot
+</code></pre>
+<p>or manually:</p>
+<p>Clone this repository:</p>
+<pre><code>git clone https://github.com/sowoi/nextcloud-talk-bot.git
+</code></pre>
               
             </div>
           </div><footer>
@@ -152,5 +161,5 @@ License
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-11 19:50:23.698396+00:00
+Build Date UTC : 2023-04-11 19:57:37.714135+00:00
 -->
