--- a/site/index.html
+++ b/site/index.html
@@ -90,13 +90,15 @@
             <div class="section" itemprop="articleBody">
               
                 <h2 id="table-of-contents">Table of Contents</h2>
-<p><a href="#requirements">Requirements</a>
-[Installation] (#installation)
-Configuration
-Usage
-Commands
-Contributing
-License</p>
+<ul>
+<li><a href="#requirements">Requirements</a></li>
+<li><a href="#installation">Installation</a></li>
+<li>Configuration</li>
+<li>Usage</li>
+<li>Commands</li>
+<li>Contributing</li>
+<li>License</li>
+</ul>
 <h2 id="requirements">Requirements</h2>
 <p><a id='requirements'></a>
 To use the Nextcloud Talk Bot, you will need:</p>
@@ -161,5 +163,5 @@ To use the Nextcloud Talk Bot, you will need:</p>
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-11 19:57:37.714135+00:00
+Build Date UTC : 2023-04-11 19:59:57.016462+00:00
 -->
