--- a/site/NextcloudUser/index.html
+++ b/site/NextcloudUser/index.html
@@ -95,10 +95,10 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <h1 id="nextcloud-talk-bot-extractor">Nextcloud Talk Bot: Extractor</h1>
+                <h1 id="nextcloud-talk-bot-user">Nextcloud Talk Bot: User</h1>
 <p>The NextcloudUser class represents a Nextcloud user and provides functionality to fetch user data and test user login by interacting with the Nextcloud API.</p>
 <h2 id="initialization">Initialization:</h2>
-<p>To create an instance of the NextcloudTalkExtractor class, you will need the following information:</p>
+<p>To create an instance of the NextcloudUser class, you will need the following information:</p>
 <ul>
 <li>base_url: The base URL for the Nextcloud server.</li>
 <li>username: The username for the Nextcloud user account.</li>
