--- a/site/NextcloudPoll/index.html
+++ b/site/NextcloudPoll/index.html
@@ -112,7 +112,7 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <h1 id="nextcloud-talk-bot-meeting">Nextcloud Talk Bot: Meeting</h1>
+                <h1 id="nextcloud-talk-bot-poll">Nextcloud Talk Bot: Poll</h1>
 <p>NextcloudPoll  can be used to create, get, and close polls in a Nextcloud Talk room. </p>
 <h2 id="initialization">Initialization</h2>
 <p>To create an instance of the NextcloudTalkExtractor class, you will need the following information:</p>
