--- a/site/NextcloudCommands/index.html
+++ b/site/NextcloudCommands/index.html
@@ -167,6 +167,24 @@ print_available_classes(): A method that prints the available options.</p>
 <li>--list, -l: List available options or functions.</li>
 <li>--setup, -s: Run the first run setup.</li>
 </ul>
+<h1 id="use-in-the-nextcloud-talk-app">Use in the Nextcloud Talk app:</h1>
+<p>The new commands are started directly in the chat with /ncb.</p>
+<h2 id="examples">Examples</h2>
+<pre><code># print help
+/ncb -h 
+
+# show list of options
+/ncb -l
+
+# show list of functions
+/ncb &lt;option&gt; -l
+
+# run function
+/ncb &lt;option&gt; &lt;function&gt;
+
+# print help to option or function
+/ncb &lt;option&gt;/&lt;function&gt; -h
+</code></pre>
               
             </div>
           </div><footer>
