--- a/site/NextcloudMonitoring/index.html
+++ b/site/NextcloudMonitoring/index.html
@@ -160,7 +160,7 @@ returns: mesage dictionary with message_id and actor</li>
 <li>App updates are available.</li>
 </ul>
 <h2 id="nextcloud-talk-command">Nextcloud Talk Command</h2>
-<p>If you want to use monitoring via nextcloud commands, follow the steps under <a href="Commands">Commands</a>  or if you want to implement it afterwards, start the bash script with the --monitoring flag.</p>
+<p>If you want to use monitoring via nextcloud commands, follow the steps under <a href="NextcloudCommands">Commands</a>  or if you want to implement it afterwards, start the bash script with the --monitoring flag.</p>
 <p>You can manually create a token using the <code>occ config:app:set serverinfo token --value &lt;YourToken&gt;</code> command</p>
               
             </div>
