--- a/site/index.html
+++ b/site/index.html
@@ -140,6 +140,8 @@ To use the Nextcloud Talk Bot, you will need:</p>
 <p>Clone this repository:</p>
 <pre><code>git clone https://github.com/sowoi/nextcloud-talk-bot.git
 </code></pre>
+<p>Not a developer?
+There is a fully automated bash script that you can run on your NextcloudServer to do the installation <a href="NextcloudCommands">Commands</a>.</p>
 <h2 id="configuration">Configuration</h2>
 <p><a id='configuration'></a></p>
 <p>There is an interactive script which guides you through the configuration, see <a href="FirstRunSetup">FirstRunSetup</a></p>
@@ -215,5 +217,5 @@ Contact me via my <a href="https://okxo.de">website</a>.  </p>
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-17 08:57:45.682727+00:00
+Build Date UTC : 2023-04-17 09:02:09.315156+00:00
 -->
