--- a/site/index.html
+++ b/site/index.html
@@ -141,7 +141,8 @@ To use the Nextcloud Talk Bot, you will need:</p>
 <pre><code>git clone https://github.com/sowoi/nextcloud-talk-bot.git
 </code></pre>
 <p>Not a developer?
-There is a fully automated bash script that you can run on your NextcloudServer to do the installation and configuration: See <a href="NextcloudCommands">Commands</a>.</p>
+There is a fully automated bash script that you can run on your NextcloudServer to do the installation and configuration: See <a href="NextcloudCommands">Commands</a>.
+For those who don't want to use a bash script, there is also an Ansible script: See <a href="AnsiblePlaybook">AnsiblePlaybook</a>. </p>
 <h2 id="configuration">Configuration</h2>
 <p><a id='configuration'></a></p>
 <p>There is an interactive script which guides you through the configuration, see <a href="FirstRunSetup">FirstRunSetup</a></p>
@@ -217,5 +218,5 @@ Contact me via my <a href="https://okxo.de">website</a>.  </p>
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-04-17 09:05:36.883768+00:00
+Build Date UTC : 2023-04-17 18:29:24.333435+00:00
 -->
