--- a/site/AnsiblePlaybook/index.html
+++ b/site/AnsiblePlaybook/index.html
@@ -123,7 +123,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="nextcloud-talk-bot-setup-via-ansible">Nextcloud Talk Bot: Setup via Ansible</h1>
-<p>This Ansible playbook sets up a Nextcloud Talk bot on your Nextcloud server.</p>
+<p>This Ansible playbook <a href="https://raw.githubusercontent.com/sowoi/nextcloud-talk-bot/main/ansible/playbook.yml">playbook.yml</a> sets up a Nextcloud Talk bot on your Nextcloud server.</p>
 <h2 id="overview">Overview</h2>
 <p>The playbook performs the following tasks:</p>
 <ul>
